1632519408 | 23 files | M bin/version.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/dashboard/systemreportviewer.html,  M resources/webinterface/dashboard/systemui.html,  M resources/webinterface/dashboard/vrmonitor.html,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libicui18n.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libicuuc.txt,  M tools/steamvr_environments/game/bin/linuxsteamrt64/libopenvr_api.txt,  M to
https://steamdb.info/patchnotes/7421288/

--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -220,7 +220,7 @@
 "MenuAction_DisplayMirror" "Display VR View"
 "MenuAction_PerformanceGraph" "Display Performance Graph"
 "MenuAction_ShowControllerBinding" "Controller Settings"
-"MenuAction_ShowManageTrackers" "Manage Vive Trackers"
+"MenuAction_ShowManageTrackers" "Manage Trackers"
 "MenuAction_UpdateFirmware" "Update Device"
 "MenuAction_ForceFirmware" "Force Firmware"
 "MenuAction_DirectMode" "Direct Display Mode"
@@ -520,6 +520,7 @@
 "MenuAction_Compositor_ShowMirror" "Show VR View"
 "MenuAction_Compositor_HideMirror" "Hide VR View"
 "MenuAction_IdentifyController" "Identify Controller"
+"MenuAction_IdentifyTracker" "Identify Tracker"
 "MenuAction_QuickCalibrate" "Quick Calibrate"
 "Explanation_QuickCalibrate" "Quickly reset your Room Setup. For Standing and Room Scale VR, new bounds will be centered on your headset on the floor in the center of your space."
 "MenuAction_ResetRuntimeAndQuit" "Reset SteamVR path"
