1636416647 | 62 files | M Protobufs/vr_messages.proto,  M bin/linux64/libopenvr_api.txt,  M bin/linux64/libopenvr_api_strings.txt,  M bin/linux64/libprism.txt,  M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient.txt,  M bin/vrclient_strings.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_greek.txt,  M content/vrmonitor/translations/vrmonitor_german.txt,  M content/vrmonitor/translations/vrmonitor_spanish.txt,  M drivers/gamepad/bin/linux32/driver_gamepad.txt,  M drivers/gamepad/bin/linux32/driver_gamepad_strings.txt,  M drivers/gamepad/bin/linux64/driver_gamepad.txt,  M drivers/gamepad/bin/linux64/driver_gamepad_strings.txt,  M drivers/lighthouse/bin/linux32/driver_lighthouse.txt,  M drivers/lighthouse/bin/linux32/driver_lighthouse_strings.txt,  M drivers/lighthouse/bin/linux64/driver_lighthouse.txt,  M drivers/lighthouse/bin/linux64/driver_lighthouse_strings.txt,  M drivers/l
https://steamdb.info/patchnotes/7678809/

--- a/content/vrmonitor/translations/vrmonitor_errors_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_greek.txt
@@ -257,7 +257,7 @@
 "VRInitError_Driver_HmdDisplayNotFound_Action" "Περισσότερες πληροφορίες"
 "VRInitError_Driver_HmdDisplayNotFound_ActionURL" "https://help.steampowered.com/el/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 
-"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header" "Φορητός υπολογιστής: Αποσύνδεση οθόνης headset"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_Header" "Φορητός υπολογιστής: Αποσυνδεδεμένη οθόνη headset"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Description" "Βεβαιωθείτε ότι τα καλώδια βίντεο είναι συνδεδεμένα με ασφάλεια στον φορητό υπολογιστή σας. Οι φορητοί υπολογιστές μπορεί να απαιτούν ειδική ρύθμιση για να λειτουργήσουν με VR."
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstAction" "Επαναφορά headset"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL" "vrmonitor://reboothmd" 
