--- a/content/vrmonitor/translations/vrmonitor_errors_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_english.txt
@@ -276,8 +276,13 @@
 "VRInitError_Driver_PeerDriverNotInstalled_Action" "More info"
 "VRInitError_Driver_PeerDriverNotInstalled_ActionURL" "https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 
+"VRInitError_Driver_WirelessHmdNotConnected_Header" "Wireless Headset Not Connected"
+"VRInitError_Driver_WirelessHmdNotConnected_Description" "Please make sure your wireless headset is powered on so it can connect to SteamVR."
+"VRInitError_Driver_WirelessHmdNotConnected_Action" "More info"
+"VRInitError_Driver_WirelessHmdNotConnected_ActionURL" "https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#headset"
+
 "VRInitError_Init_PrismNeedsNewDrivers_Header" "Graphics driver update"
-"VRInitError_Init_PrismNeedsNewDrivers_Description" "You need to update your computer's graphics driver."
+"VRInitError_Init_PrismNeedsNewDrivers_Description" "You need to update your computer's graphics driver, or enable hardware-accelerated GPU scheduling."
 "VRInitError_Init_PrismNeedsNewDrivers_Action" "More info"
 "VRInitError_Init_PrismNeedsNewDrivers_ActionURL" "https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326#steamvr-issues"
 
