1639433079 | 23 files | M bin/linux64/libopenvr_api.txt,  M bin/linux64/libopenvr_api_strings.txt,  M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient_strings.txt,  M drivers/lighthouse/bin/linux32/driver_lighthouse_strings.txt,  M drivers/lighthouse/bin/linux64/driver_lighthouse_strings.txt,  M drivers/lighthouse/resources/webinterface/pairing.html,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/localization/vrmonitor_english.json,  M resources/webinterface/dashboard/messageoverlay.html,  M resources/webinterface/dashboard/notificationtoast.html,  M resources/webinterface/dashboard/scenegraphtest.html,  M resources/webinterface/dashboard/settings_desktop.html,  M resources/webinterface/
https://steamdb.info/patchnotes/7877140/

--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -295,7 +295,7 @@
 	"Settings_General_Notifications_Label": "Notifications",
 	"Settings_General_Notifications_Text": "Allow notifications while in VR",
 	"Settings_General_ShowBindingUI": "Edit Controller Bindings",
-	"Settings_General_ShowTrackerUI": "Manage Vive Trackers",
+	"Settings_General_ShowTrackerUI": "Manage Trackers",
 
 	"Settings_General_Cancel": "Cancel",
 	"Settings_General_Confirm": "Confirm",
