--- a/resources/webinterface/dashboard/localization/webhelper_english.json
+++ b/resources/webinterface/dashboard/localization/webhelper_english.json
@@ -86,5 +86,7 @@
 
 	"KeyboardDone" : "Done",
 
+	"CompatibilityMode_Notification": "Automatic compatibility mode enabled. Using binding for '%1$s'.",
+
 	"DO_NOT_TRANSLATE": "IgnoreMe"
 }
