1651003350 | 78 files | M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M drivers/gamepad/bin/win32/driver_gamepad_strings.txt,  M drivers/gamepad/bin/win64/driver_gamepad_strings.txt,  M drivers/indexhmd/resources/input/vrcompositor_bindings_indexhmd.json,  M drivers/lighthouse/bin/linux32/driver_lighthouse_strings.txt,  M drivers/lighthouse/bi
https://steamdb.info/patchnotes/8628614/

--- a/resources/webinterface/dashboard/localization/dashboard_english.json
+++ b/resources/webinterface/dashboard/localization/dashboard_english.json
@@ -53,6 +53,7 @@
   "DesktopViewsUpdating": "Desktop views updating...",
   "AddView": "Add View",
   "CloseView": "Close View",
+  "CloseOverlay": "Close Overlay",
   "DockHere": "Dock Here",
   "DockOnLeftController": "Dock on Left Controller",
   "UndockFromLeftController": "Undock from Left Controller",
