1660604910 | 86 files | M Protobufs/vr_messages.proto,  M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M content/vrmonitor/translations/vrmonitor_french.txt,  M content/vrmonitor/translations/vrmonitor_korean.txt,  M content/vrmonitor/translations/vrmonitor_koreana.txt,  M content/vrmonitor/translations/vrmonitor_turkish.txt,  M drivers/gamepad
https://steamdb.info/patchnotes/9320174/

--- a/content/vrmonitor/translations/vrmonitor_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_french.txt
@@ -187,7 +187,7 @@
 "MenuAction_RecentPlaylists" "Playlists récentes"
 "MenuAction_Diagnostics" "Avancés"
 "MenuAction_Directories" "Répertoires"
-"MenuAction_LogFiles" "Fichiers de logs"
+"MenuAction_LogFiles" "Fichiers journaux"
 "MenuAction_More" "Plus"
 "MenuAction_CouldNotReadLogFiles" "Impossible de lire les fichiers de logs"
 "MenuAction_PairingWizard" "Associer un contrôleur"
