1667521602 | 88 files | M bin/linux64/libopenvr_api.txt,  M bin/linux64/libopenvr_api_strings.txt,  M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/linux64/libopenvr_api.txt,  M bin/vrwebhelper/linux64/libopenvr_api_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M content/vrmonitor/translations/vrmonitor_portuguese.txt,  M content/vrmonitor/translations/vrmoni
https://steamdb.info/patchnotes/9866255/

--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -264,7 +264,7 @@
 "Settings_EnableDashboard" "Ativar Painel de R.V."
 "Settings_ArcadeMode" "Ativar modo Arcade"
 "Settings_PauseOnStandby" "Pausar renderização se headset estiver inativo"
-"Settings_DebugInputBindings" "Ativar opções de debug na interface de designação de botões"
+"Settings_DebugInputBindings" "Ativar opções de debug na interface de configuração de controlos"
 "Settings_DoNotFadeToGrid" "Não mostrar grelha se aplicação encravar"
 
 "Settings_ShowPlaylistMenu" "Mostrar menu de reprodução"
