1703198392 | 91 files | M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_english.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_english.txt,  M content/vrmonitor/translations/vrmo
https://steamdb.info/patchnotes/13024612/

--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -66,7 +66,7 @@
 "DismissableWarning_SteamVRInSafeMode" "SteamVR in veilige modus (0x1000000)"
 "DismissableWarning_SteamBetaNeeded" "Bèta van de Steam-client vereist (0x10000000000)"
 "DismissableWarning_RequiresSteamUpdate" "Update van de Steam-client vereist (0x80000000000)"
-"DismissableWarning_SteamStreamingAudioEndpointDisabled" " Audio-apparaat voor Steam Link uitgeschakeld. (0x100000000000)"
+"DismissableWarning_SteamStreamingAudioEndpointDisabled" " Audio-apparaat voor Steam-streaming uitgeschakeld. (0x100000000000)"
 
 "DismissableWarning_Detected" "Gedetecteerd"
 "DismissableWarning_TimeFormat" "h:mm:ss"
