--- a/content/vrmonitor/translations/vrmonitor_latam.txt
+++ b/content/vrmonitor/translations/vrmonitor_latam.txt
@@ -193,7 +193,7 @@
 "MenuAction_LogFiles" "Archivos de registro"
 "MenuAction_More" "Más"
 "MenuAction_CouldNotReadLogFiles" "No se han podido leer los archivos de registro"
-"MenuAction_PairingWizard" "Emparejar mando"
+"MenuAction_PairingWizard" "Emparejar control"
 "MenuAction_FirmwareUpdate" "Actualizar dispositivo"
 "MenuAction_SetLogDirectory" "Establecer directorio de registro"
 "MenuAction_SetConfigDirectory" "Establecer directorio de configuración"
@@ -208,7 +208,7 @@
 "MenuAction_DirectMode" "Modo de visualización directo"
 "MenuAction_EnableDirectMode" "Activar modo de visualización directo"
 "MenuAction_DisableDirectMode" "Desactivar modo de visualización directo"
-"MenuAction_PairController" "Emparejar mando"
+"MenuAction_PairController" "Emparejar control"
 "MenuAction_PowerOffController" "Apagar control"
 "MenuAction_IdentifyBaseStation" "Identificar estación base"
 "MenuAction_Workshop" "Workshop"
@@ -512,7 +512,7 @@
 "MenuAction_RemoveAllSteamVRUSBDevices" "Quitar todos los dispositivos USB de SteamVR"
 "Explanation_RemoveAllSteamVRUSBDevices" "Retira todos los dispositivos USB asociados a SteamVR de este equipo para reinstalar los controladores."
 "MenuAction_DisableEnhancedPowerManagement" "Desactivar administración de energía"
-"Explanation_DisableEnhancedPowerManagement" "Desactiva la administración mejorada de energía de Windows para los dispositivos USB de SteamVR si sufres unas misteriosa pérdida de estadísticas o no puedes sincronizar los mandos inalámbricos."
+"Explanation_DisableEnhancedPowerManagement" "Desactiva la administración mejorada de energía de Windows para los dispositivos USB de SteamVR si sufres unas misteriosa pérdida de estadísticas o no puedes sincronizar los controles inalámbricos."
 "MenuAction_ResetAllSettingsAndQuit" "Restablecer todos los ajustes y reiniciar"
 "MenuAction_RebootVive" "Reiniciar el visor"
 "Explanation_RebootVive" "Reiniciar el visor puede solucionar problemas relacionados con el USB."
@@ -657,7 +657,7 @@
 "PairingWizard_PairController_Success_Title" "¡Hecho!"
 "PairingWizard_PairAnotherController" "Emparejar otro controlador"
 
-"PairingWizard_LookingForControllers_Header" "Buscando mando..."
+"PairingWizard_LookingForControllers_Header" "Buscando control..."
 "PairingWizard_LookingForControllers_Content" "Mantén pulsados los botones App y System hasta que el control emita un sonido.\n\nSu luz empezará a parpadear en azul para indicar que se encuentra en modo de emparejamiento."
 "PairingWizard_TimeoutHappened_Header" "No se ha detectado ningún controlador"
 "PairingWizard_TimeoutHappened_Content" "Asegúrate de que tu control esté cargado y que permanece cerca de tu visor a la hora de emparejar."
@@ -710,7 +710,7 @@
 
 "FirmwareWizard_UpdateController_Start_Title" "Actualizar control"
 "FirmwareWizard_UpdateController_Start_UpperText" " "
-"FirmwareWizard_UpdateController_Start_MiddleText" "Conecta este mando a tu equipo mediante un cable micro-USB. Puedes emplear el mismo cable que utilizas para cargar tus mandos."
+"FirmwareWizard_UpdateController_Start_MiddleText" "Conecta este control a tu equipo mediante un cable micro-USB. Puedes emplear el mismo cable que utilizas para cargar tus controles."
 "FirmwareWizard_UpdateController_Start_LowerText" "La actualización comenzará automáticamente una vez que se detecte el control."
 
 "FirmwareWizard_UpdateController_Progress_Title" "Actualizar control"
@@ -921,7 +921,7 @@
 "WorkshopUpload_Error_InvalidType_Thumbnail_Basestation"	"Las imágenes en miniatura deben ser archivos png o jpg"
 "WorkshopUpload_Error_InvalidType_MainFile_Background"		"Las imágenes de fondo deben ser archivos png o jpg"
 "WorkshopUpload_Error_InvalidType_MainFile_Environment"		"Los archivos de modelo de entorno deben ser de tipo obj"
-"WorkshopUpload_Error_InvalidType_MainFile_Controller"		"Los archivos de modelo de mando deben ser de tipo obj"
+"WorkshopUpload_Error_InvalidType_MainFile_Controller"		"Los archivos de modelo de control deben ser de tipo obj"
 "WorkshopUpload_Error_InvalidType_MainFile_Camera"			"El archivo de modelo de cámara debe ser de tipo obj"
 "WorkshopUpload_Error_InvalidType_MainFile_Basestation"		"El archivo de modelo de estación base debe ser de tipo obj"
 "WorkshopUpload_Error_LimitExceeded"	"Error de Steam: \"Límite excedido\". Asegúrate de que la miniatura ocupe menos de 1 MB."
@@ -949,12 +949,12 @@
 
 "MenuAction_CalibrateController" "Calibrar controlador"
 "CalibrateControllerTrackpad_Title" "Calibrar trackpad del controlador"
-"CalibrateControllerTrackpad_Start_UpperText" "Esto calibrará el trackpad de tu mando. Deberías calibrar el trackpad si parece que tiembla o si ves toques inesperados."
+"CalibrateControllerTrackpad_Start_UpperText" "Esto calibrará el trackpad de tu control. Deberías calibrar el trackpad si parece que tiembla o si ves toques inesperados."
 "CalibrateControllerTrackpad_Start_LowerText" "Asegúrate de no tocar el trackpad y haz clic en Siguiente para continuar."
 "CalibrateControllerTrackpad_Progress_UpperText" "Calibrando el trackpad..."
 "CalibrateControllerTrackpad_Progress_LowerText" " "
 "CalibrateControllerTrackpad_Success" "¡Hecho!"
-"CalibrateControllerTrackpad_End_UpperText" "El trackpad de tu mando está ahora calibrado."
+"CalibrateControllerTrackpad_End_UpperText" "El trackpad de tu control está ahora calibrado."
 "CalibrateControllerTrackpad_End_LowerText" " "
 
 "PlaylistEntryDefaultName" "Entrada"
