--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -168,7 +168,7 @@
 	"Settings_Advanced_MotionSmoothing_Disabled_Win7": "모션 스무딩은 Windows 구 버전에서는 지원되지 않습니다.",
 	"Settings_Advanced_Supersampling_Auto": "자동",
 	"Settings_Advanced_Supersampling_Custom": "사용자 지정",
-	"Settings_Advanced_Supersampling_Header": "해상도 렌더링",
+	"Settings_Advanced_Supersampling_Header": "렌더링 해상도",
 	"Settings_Advanced_Supersampling_Warning": "아래의 설정은 자동 설정을 재정의하고 모든 애플리케이션에 영향을 미칩니다. 특정 애플리케이션의 해상도 변경은 '애플리케이션 설정'에서 진행하세요.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "해상도 조정 활성화",
