1721847232 | 99 files | M bin/linux64/libprism_strings.txt,  M bin/linux64/vrclient.txt,  M bin/linux64/vrclient_strings.txt,  M bin/version.txt,  M bin/vrclient.txt,  M bin/vrclient_strings.txt,  M bin/vrclient_x64_strings.txt,  M bin/vrwebhelper/win64/openvr_api_strings.txt,  M bin/win32/imagetool_strings.txt,  M bin/win32/nrfserlib_strings.txt,  M bin/win32/openvr_api_strings.txt,  M bin/win32/vivelinklib_strings.txt,  M bin/win64/imagetool_strings.txt,  M bin/win64/nrfserlib_strings.txt,  M bin/win64/openvr_api_strings.txt,  M bin/win64/openxr_loader_strings.txt,  M bin/win64/prism_strings.txt,  M bin/win64/vivelinklib_strings.txt,  M bin/win64/vrdesktop_graphics_capture_strings.txt,  M bin/win64/vrdesktop_strings.txt,  M bin/win64/winrtdisplay_strings.txt,  M content/vrmonitor/translations/vrmonitor_schinese.txt,  M content/vrmonitor/translations/vrmonitor_spanish.txt,  M content/vrmonitor/translations/vrmonitor_vietnamese.txt,  M drivers/gamepad/bin/win32/driver_gamepad_strings.txt,  M drivers/gamepad/bin/win64/driver_gamepad_
https://steamdb.info/patchnotes/15141130/

--- a/content/vrmonitor/translations/vrmonitor_schinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_schinese.txt
@@ -225,7 +225,7 @@
 "MenuAction_PowerOffTracker" "关闭追踪器"
 "MenuAction_ReportABug" "报告错误"
 "MenuAction_WebConsole" "网页控制台"
-"MenuAction_OverlayViewer" "界面查看器"
+"MenuAction_OverlayViewer" "叠加界面查看器"
 "MenuAction_DebugCommands" "调试命令"
 "MenuAction_WebDevToolsPlaceholder" "未找到实例"
 
@@ -321,7 +321,7 @@
 "Settings_NightModeCheck" "夜间模式"
 "Settings_NightModeDesc" "使头戴式显示器变暗直至凌晨 5 点 （或直至 SteamVR 重启）。"
 "Settings_LockedModeCheck" "电脑锁定期间启用头戴式显示器"
-"Settings_Dashboard_Explanation" "这些应用程序将能以界面的形式在 VR 主面板中访问。"
+"Settings_Dashboard_Explanation" "这些应用程序将能以叠加界面的形式在 VR 主面板中访问。"
 "Settings_BaseStationsWakeUpAll" "唤醒所有定位器"
 "Settings_BaseStationsWakeUpAll_Explanation" "唤醒所有参与远程电源管理的定位器。"
 "Settings_EnableScreenshots_Info" "使用系统键 + 扳机键进行截图"
@@ -418,9 +418,9 @@
 "Settings_PerApplication_AppResTitle" "自定义分辨率"
 "Settings_PerApplication_AppResHeader" "此设置为您的“视频应用程序分辨率”设置的倍数。此应用程序可能需要重新启动，以使设置生效。（默认为 100%）"
 "Settings_PerApplication_AppResFooter" "当前设置以 <font color=#eeeeee>%1x%2</font> 渲染每只眼睛"
-"Settings_PerApplication_OverlayVisibleHeader" "在 SteamVR 主面板中，界面应用程序可作为选项卡使用。"
-"Settings_PerApplication_OverlayVisibleCheckbox" "SteamVR 启动时开始此界面应用程序。"
-"Settings_PerApplication_DashboardSuffix" "（界面应用程序）"
+"Settings_PerApplication_OverlayVisibleHeader" "在 SteamVR 主面板中，叠加界面应用程序可作为选项卡使用。"
+"Settings_PerApplication_OverlayVisibleCheckbox" "SteamVR 启动时开启此叠加界面应用程序。"
+"Settings_PerApplication_DashboardSuffix" "（叠加界面应用程序）"
 "Settings_PerApplication_CustomSuffix" "（自定义）"
 
 "Settings_PerApplication_MotionSmoothing_Header" "运动平滑"
