--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -168,7 +168,7 @@
 "MenuAction_Developer" "Desarrollador"
 "MenuAction_WebDevTools" "Herramientas de desarrollo web"
 "MenuAction_SteamVRWebsite" "Soporte de SteamVR"
-"MenuAction_SteamVRCommunity" "Comunidad SteamVR"
+"MenuAction_SteamVRCommunity" "Comunidad de SteamVR"
 "MenuAction_SteamVRHardwareDiscussions" "Discusiones sobre hardware de SteamVR"
 "MenuAction_SteamVRDeveloperSupport" "Soporte para desarrolladores de SteamVR"
 "MenuAction_SteamWorksDeveloperSupport" "Soporte para desarrolladores de Steamworks"
@@ -207,8 +207,8 @@
 "MenuAction_UpdateFirmware" "Actualizar dispositivo"
 "MenuAction_ForceFirmware" "Forzar firmware"
 "MenuAction_DirectMode" "Modo de visualización directo"
-"MenuAction_EnableDirectMode" "Activar modo de visualización directo"
-"MenuAction_DisableDirectMode" "Desactivar modo de visualización directo"
+"MenuAction_EnableDirectMode" "Activar modo de vis. directo"
+"MenuAction_DisableDirectMode" "Desactivar modo de vis. directo"
 "MenuAction_PairController" "Emparejar mando"
 "MenuAction_PowerOffController" "Apagar mando"
 "MenuAction_IdentifyBaseStation" "Identificar estación base"
