--- a/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
@@ -321,7 +321,7 @@
   "BindingUI_Save_Public": "Chia sẻ cách gán phím này tới người dùng khác.",
   "BindingUI_Save_Export": "Lưu cách gán phím vào documents/steamvr/input/exports",
   "BindingUI_Save_ReplaceDefault": "Lưu đè lên cách gán phím mặc định cho ứng dụng này",
-  "BindingUI_Save_AddNewDefault": "Loại tay cầm này sẽ được thêm vào tệp kê khai hành động.",
+  "BindingUI_Save_AddNewDefault": "Loại tay cầm này sẽ được thêm vào file kê khai hành động.",
   "BindingUI_EditPageTitle": "Đang sửa %1$s",
   "BindingUI_ViewPageTitle": "Đang xem %1$s",
   "BindingUI_PageSubTitle": "Dùng %3$s cho %1$s trong %2$s",
@@ -375,8 +375,8 @@
   "BindingUI_List_OldVersionWarning_CurrentBinding": "Cách gán phím này được tạo với một phiên cũ của %1$s và có thể không đi kèm cùng toàn bộ các tương tác cần thiết.",
   "BindingUI_SelectAction_Required": "Yêu cầu",
   "BindingUI_SelectAction_Suggested": "Khuyến nghị",
-  "SaveError_BindingWriteFailed": "Không thể ghi lên tệp gán phím. Tệp hiện có bật tính năng chống ghi đè không?",
-  "SaveError_ActionManifestWriteFailed": "Không thể lưu lên tệp biểu hiện hành động. Tệp hiện có bật tính năng chống ghi đè không?",
+  "SaveError_BindingWriteFailed": "Không thể ghi lên file gán phím. File hiện có bật tính năng chống ghi đè không?",
+  "SaveError_ActionManifestWriteFailed": "Không thể lưu lên file biểu hiện hành động. File hiện có bật tính năng chống ghi đè không?",
   "SaveError_BindingMissingRequiredActions": "Lưu cách gán phím không thành công do thiếu một hoặc nhiều hành động cần phải có.",
   "SaveError_BindingMissingActionsList": "Hành động bị thiếu",
   "AppSelect_Title": "Chọn ứng dụng để sửa",
