--- a/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_finnish.json
@@ -77,7 +77,7 @@
 	"Settings_SectionTitle_Camera": "Kamera",
 	"Settings_SectionTitle_Bluetooth": "Bluetooth",
 	"Settings_SectionTitle_Power": "Virta",
-	"Settings_SectionTitle_StartupShutdown": "Käynnistys / sammutus",
+	"Settings_SectionTitle_StartupShutdown": "Käynnistys ja sammutus",
 	"Settings_SectionTitle_Home": "Koti",
 	"Settings_SectionTitle_PlayArea": "Pelialue",
 	"Settings_SectionTitle_BaseStation": "Tukiasemat",
