--- a/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_turkish.json
@@ -350,12 +350,12 @@
 	"Settings_AdvancedSettings": "Gelişmiş Ayarlar",
 	"Settings_Show": "Göster",
 	"Settings_Hide": "Gizle",
-	"Settings_ViveTracker": "Vive İzleyicisi",
-	"Settings_ViveTrackers": "Vive İzleyicileri",
-	"Settings_ViveTracker_Role": "İzleyici Rolü",
+	"Settings_ViveTracker": "VIVE Tracker",
+	"Settings_ViveTrackers": "VIVE Trackers",
+	"Settings_ViveTracker_Role": "Tracker Rolü",
 	"Settings_ViveTracker_Hand": "El",
-	"Settings_ViveTracker_Identify_NotConnected": "Vive izleyicisi bağlı değil.",
-	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive izleyicisi tespit edilemedi.",
+	"Settings_ViveTracker_Identify_NotConnected": "VIVE Tracker bağlı değil.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "VIVE Tracker tanımlama yapamıyor.",
 	"Settings_ViveTracker_Connected": "Bağlandı",
 	"Settings_ViveTracker_Disconnected": "Bağlantısı Kesildi",
 	"Settings_PerApplication_VideoSettings": "Uygulamaya Özel Video Ayarları",
