--- a/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_vietnamese.json
@@ -352,7 +352,7 @@
 	"Settings_Hide": "Ẩn",
 	"Settings_ViveTracker": "Vive Tracker",
 	"Settings_ViveTrackers": "Vive Tracker",
-	"Settings_ViveTracker_Role": "Vai trò của máy theo dõi",
+	"Settings_ViveTracker_Role": "Vai trò của Tracker",
 	"Settings_ViveTracker_Hand": "Tay",
 	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker chưa kết nối.",
 	"Settings_ViveTracker_Identify_NotIdentifiable": "Không thể nhận diện Vive Tracker.",
