--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -492,6 +492,9 @@
   "InputDebugger_Source" : "Source:",
   "InputDebugger_Binding" : "Binding:",
   "InputDebugger_Active" : "Active:",
+  "InputDebugger_Connected" : "Device Connected:",
+  "InputDebugger_Pose_Valid" : "Pose Valid:",
+  "InputDebugger_Pose_Result" : "Pose State:",
   "InputDebugger_ActiveOrigin" : "Origin:",
   "InputDebugger_UpdateTime" : "Last Update:",
   "InputDebugger_Value" : "Value:",
